--- a/stops/1.md
+++ b/stops/1.md
@@ -2,26 +2,26 @@
 layout: episode
 permalink: /stops/1/
 type: stop
-section_title: Introduction
+section_title: Cleopatra
 title: Welcome to the first stop in the tour
 page_rank: 1
 stop_id: 1
-audio_file: NASA_main_APU_Shutdown.mp3
+audio_file: English R05.01.AV_AR CLEOPATRA 2V v02-4K (mp3cut.net).mp3
 hero_images:
- - path: 01-introduction-01.jpg
-   alt_text: First example photo for stop 1
- - path: 01-introduction-02.jpg
-   alt_text: Second example photo for stop 1
+ - path: Cleopatra.jpg
+   alt_text: Image of Cleopatra
+ - path: Cleopatra 2.jpg
+   alt_text: Another image of Cleopatra
 ---
 
-Replace this section of text with the full transcript of your audio guide stop. Use a second level heading to flag the person speaking
+Cleopatra was the last pharaoh of ancient Egypt and is known for her beauty, intelligence, and political savvy. She was born in 69 BC and ruled Egypt from 51 BC until her death in 30 BC. Cleopatra was involved in a romantic relationship with Julius Caesar and later with Mark Antony, which ultimately led to her downfall. She was also known for her knowledge of languages and her efforts to maintain Egypt's independence from Rome.
 
-## Person speaking (second level heading)
+## Cleopatra
 
-> And this blockquote is styled to make it clear that this section really is someone speaking.
+> Welcome to the first meeting point, where we explore people, places or moments of coming together, and the ripples of ideas that they generate. Here we look at the legacy of histories and stories: what stories do we remember, and which histories are forgotten?
 
-And we can go back to a normal transcript.
+The tragic love story of Antony and Cleopatra played out only a few years before Amanirenas, Queen of the Kingdom of Kush (in present-day Sudan and southern Egypt), victoriously led her armies against Rome. 
 
-### A third level heading
+One story has been celebrated and reinterpreted endlessly in the West - from Shakespeare to Hollywood - while one has been overlooked. 
 
-The example audio used here is borrowed from [NASA](http://www.nasa.gov/connect/sounds/index.html#Discovery) under the terms of their [usage guidelines](http://www.nasa.gov/multimedia/guidelines/index.html). This is just a test clip, so you'll need to replace it!
+This prejudice is embodied in differing Western conceptions of Egypt and Nubia, and Mediterranean versus African civilisations. Qatar is supporting excavations in Sudan, shedding light on these overlooked histories, and reasserting the importance of Kush and other African civilisations in the archaeological record.
