--- a/stops/1.md
+++ b/stops/1.md
@@ -14,7 +14,7 @@ hero_images:
    alt_text: Another image of Cleopatra
 ---
 
-Cleopatra was the last pharaoh of ancient Egypt and is known for her beauty, intelligence, and political savvy. She was born in 69 BC and ruled Egypt from 51 BC until her death in 30 BC. Cleopatra was involved in a romantic relationship with Julius Caesar and later with Mark Antony, which ultimately led to her downfall. She was also known for her knowledge of languages and her efforts to maintain Egypt's independence from Rome.
+Images courtesy of General Collection - Doha, Lusail Museum Collection - Doha and Her Highness Sheikha Moza bint Nasser Photo Library, © AR AL – Baker
 
 ## Cleopatra
 
@@ -25,3 +25,9 @@ The tragic love story of Antony and Cleopatra played out only a few years before
 One story has been celebrated and reinterpreted endlessly in the West - from Shakespeare to Hollywood - while one has been overlooked. 
 
 This prejudice is embodied in differing Western conceptions of Egypt and Nubia, and Mediterranean versus African civilisations. Qatar is supporting excavations in Sudan, shedding light on these overlooked histories, and reasserting the importance of Kush and other African civilisations in the archaeological record.
+
+In this gallery, you will find a stunning painting by 19th-century artist Lawrence Alma-Tadema, depicting Queen Cleopatra of Egypt with Roman general and politician, Mark Antony.
+
+Have a look at the digital tablets and discover more about the enduring legacies of Egypt and Cleopatra through art and popular culture.
+
+And the Kingdom of Kush and other African civilisations, alongside Qatar’s involvement through the Qatar-Sudan Archaeological Project.
