--- a/stops/2.md
+++ b/stops/2.md
@@ -2,26 +2,31 @@
 layout: episode
 permalink: /stops/2/
 type: stop
-section_title: The Middle
-title: An incredibly rare object
+section_title: تصوير الصحراء
+title: الصحراء: سحر الشرق وجاذبيته 
 page_rank: 2
 stop_id: 2
-audio_file: NASA_main_Computers_are_in_Control.mp3
+audio_file: R06.01.AV_AR DESERT 2V v03-4K (audio-extractor.net)-[AudioTrimmer.com].mp3
 hero_images:
- - path: 02-second-stop-01.jpg
-   alt_text: First example photo for stop 2
- - path: 02-second-stop-02.jpg
-   alt_text: Second example photo for stop 2
+ - path: Desert.jpg
+   alt_text: Riders on camels
+ - path: Desert 2.jpg
+   alt_text: Man speaking to other men
 ---
+	الصور بإذن من مجموعة المقتنيات العامة - الدوحة
+ومجموعة مقتنيات متحف لوسيل – الدوحة ومتحف موسغارد
 
-Replace this section of text with the full transcript of your audio guide stop. Use a second level heading to flag the person speaking
 
-## Person speaking
+##  الصحراء
 
-> And this blockquote is styled to make it clear that this section really is someone speaking.
+> تحتل الصحراء مكانة بارزة في ثقافة قطر وتراثها.
 
-And we can go back to a normal transcript.
+وتعتبر في نظر الكثير من شعوب العالم الأخرى مكانًا غريبًا ومنعزلًا وغامضًا، ولا يوجد إلا في الخيال فقط.
 
-### A third level heading
+تعود النظرة الغربية للشرق كمنطقة صحراوية قاحلة يسكنها رعاة أشداء غريبو الطباع، إلى المؤلفين الأوروبيين القدامى، مثل هيرودوت. وقد تجلت هذه الفكرة بشكل كبير في أعمال الفنانين المستشرقين، الذين رسموا للشرق في هذه الأعمال مشاهد خيالية أيضًا.  
 
-The example audio used here is borrowed from [NASA](http://www.nasa.gov/connect/sounds/index.html#Discovery) under the terms of their [usage guidelines](http://www.nasa.gov/multimedia/guidelines/index.html). This is just a test clip, so you'll need to replace it!
+استمرت هذه الطريقة في التفكير حتى وقتنا المعاصر، ويظهر ذلك في أفلام مثل حرب النجوم ولورنس العرب، وفي الإعلام الغربي الذي يغطي أخبار الشرق الأوسط. 
+
+يصعب على الغربيين فهم الطبيعة الحية والنشطة للصحراء، وتراثها غير المادي المعقد، وهذه الجوانب مثلت أهمية كبيرة بالنسبة للمجتمع في الماضي والحاضر.   
+
+والآن، وأنت تنظر إلى الصحراء في هذه المحطة من منظور الثقافة الشعبية، وبعيون الفنانين المستشرقين، ماذا تشاهد؟ هل تشاهد مكانًا أم فكرة خيالية؟ 
