--- a/stops/2.md
+++ b/stops/2.md
@@ -2,7 +2,7 @@
 layout: episode
 permalink: /stops/2/
 type: stop
-section_title:  تصوير الصحراء
+section_title: Picturing a Desert
 title: الصحراء: سحر الشرق وجاذبيته 
 page_rank: 2
 stop_id: 2
