--- a/stops/2.md
+++ b/stops/2.md
@@ -3,7 +3,7 @@ layout: episode
 permalink: /stops/2/
 type: stop
 section_title: Picturing a Desert
-title: الصحراء: سحر الشرق وجاذبيته 
+title: The desert as a site of the exoticisation and othering of ‘the East’ 
 page_rank: 2
 stop_id: 2
 audio_file: R06.01.AV_AR DESERT 2V v03-4K.mp3
