--- a/stops/2.md
+++ b/stops/2.md
@@ -11,7 +11,7 @@ hero_images:
  - path: Desert.jpg
    alt_text: Riders on camels
  - path: Desert 2.jpg
-   alt_text: Man speaking to other men
+   alt_text: Man speaking to other men in a valley
 ---
 
 الصور بإذن من مجموعة المقتنيات العامة - الدوحة
