--- a/stops/2.md
+++ b/stops/2.md
@@ -9,7 +9,7 @@ stop_id: 2
 audio_file: R06.01.AV_AR DESERT 2V v03-4K.mp3
 hero_images:
  - path: Desert.jpg
-   alt_text: Riders on camels
+   alt_text: Two groups of riders on camels
  - path: Desert 2.jpg
    alt_text: Man speaking to other men in a valley
 ---
