--- a/stops/1.md
+++ b/stops/1.md
@@ -2,10 +2,10 @@
 layout: episode
 permalink: /stops/1/
 type: stop
-section_title: Antony and Cleopatra, and Amanirenas of Kush
-title: Welcome to the first stop in the tour
+section_title:
+title: Antony and Cleopatra, and Amanirenas of Kush
 page_rank: 1
-stop_id: 1
+stop_id:
 audio_file: English R05.01.AV_AR CLEOPATRA 2V v02-4K (mp3cut.net).mp3
 hero_images:
  - path: Cleopatra.jpg
