--- a/stops/2.md
+++ b/stops/2.md
@@ -2,10 +2,10 @@
 layout: episode
 permalink: /stops/2/
 type: stop
-section_title: Picturing a Desert
-title: The desert as a site of the exoticisation and othering of ‘the East’ 
+section_title:
+title: Picturing a Desert
 page_rank: 2
-stop_id: 2
+stop_id:
 audio_file: R06.01.AV_AR DESERT 2V v03-4K.mp3
 hero_images:
  - path: Desert.jpg
