--- a/stops/3.md
+++ b/stops/3.md
@@ -2,10 +2,10 @@
 layout: episode
 permalink: /stops/3/
 type: stop
-section_title: Uncovering Orientalism
-title: Last stop in the tour
+section_title:
+title: Uncovering Orientalism
 page_rank: 3
-stop_id: 3
+stop_id:
 video_file: R03.01.AV_AR UNCOVERING ORIENTALISM 2V v05-4K_compressed (1).mp4
 ---
 <video src="R03.01.AV_AR UNCOVERING ORIENTALISM 2V v05-4K_compressed (1).mp4" controls="controls" muted="muted" class="d-block rounded-bottom-2 width-fit" style="max-height:640px;">
