--- a/stops/2.md
+++ b/stops/2.md
@@ -5,7 +5,7 @@ type: stop
 section_title:
 title: Picturing a Desert
 page_rank: 2
-stop_id:
+stop_id: 2
 audio_file: R06.01.AV_AR DESERT 2V v03-4K.mp3
 hero_images:
  - path: Desert.jpg
