--- a/stops/3.md
+++ b/stops/3.md
@@ -5,7 +5,7 @@ type: stop
 section_title:
 title: Uncovering Orientalism
 page_rank: 3
-stop_id:
+stop_id: 3
 video_file: R03.01.AV_AR UNCOVERING ORIENTALISM 2V v05-4K_compressed (1).mp4
 ---
 <video src="R03.01.AV_AR UNCOVERING ORIENTALISM 2V v05-4K_compressed (1).mp4" controls="controls" muted="muted" class="d-block rounded-bottom-2 width-fit" style="max-height:640px;">
