--- a/stops/1.md
+++ b/stops/1.md
@@ -2,7 +2,7 @@
 layout: episode
 permalink: /stops/1/
 type: stop
-section_title:
+section_title: Antony and Cleopatra, and Amanirenas of Kush
 title: Antony and Cleopatra, and Amanirenas of Kush
 page_rank: 1
 stop_id: 1
