--- a/stops/3.md
+++ b/stops/3.md
@@ -2,7 +2,7 @@
 layout: episode
 permalink: /stops/3/
 type: stop
-section_title:
+section_title:Uncovering Orientalism
 title: Uncovering Orientalism
 page_rank: 3
 stop_id: 3
