--- a/stops/1.md
+++ b/stops/1.md
@@ -6,7 +6,7 @@ section_title: Antony and Cleopatra, and Amanirenas of Kush
 title: Antony and Cleopatra, and Amanirenas of Kush
 page_rank: 1
 stop_id: 1
-audio_file: English R05.01.AV_AR CLEOPATRA 2V v02-4K (mp3cut.net).mp3
+audio_file: English R05 (mp3cut.net).mp3
 hero_images:
  - path: Cleopatra.jpg
    alt_text: Image of Cleopatra
