--- a/stops/2.md
+++ b/stops/2.md
@@ -6,7 +6,7 @@ section_title: Picturing a Desert
 title: Picturing a Desert
 page_rank: 2
 stop_id: 2
-audio_file: R06.01.AV_AR DESERT 2V v03-4K (mp3cut.net).mp3
+audio_file: R06 (mp3cut.net).mp3
 hero_images:
  - path: Desert.jpg
    alt_text: Two groups of riders on camels
