--- a/stops/2.md
+++ b/stops/2.md
@@ -14,8 +14,8 @@ hero_images:
    alt_text: Man speaking to other men in a valley
 ---
 
-الصور بإذن من مجموعة المقتنيات العامة - الدوحة
-ومجموعة مقتنيات متحف لوسيل – الدوحة ومتحف موسغارد
+<p align="right">الصور بإذن من مجموعة المقتنيات العامة - الدوحة
+ومجموعة مقتنيات متحف لوسيل – الدوحة ومتحف موسغارد</p>
 
 
 ##  الصحراء
