--- a/stops/2.md
+++ b/stops/2.md
@@ -14,19 +14,18 @@ hero_images:
    alt_text: Man speaking to other men in a valley
 ---
 
-<p align="right">الصور بإذن من مجموعة المقتنيات العامة - الدوحة
-ومجموعة مقتنيات متحف لوسيل – الدوحة ومتحف موسغارد</p>
+الصور بإذن من مجموعة المقتنيات العامة - الدوحة
+ومجموعة مقتنيات متحف لوسيل – الدوحة ومتحف موسغارد
 
-hg
-## <p align="right">الصحراء</p>
+## الصحراء
 
-> <p align="right">تحتل الصحراء مكانة بارزة في ثقافة قطر وتراثها.</p>
+> تحتل الصحراء مكانة بارزة في ثقافة قطر وتراثها.
 
-<p align="right">وتعتبر في نظر الكثير من شعوب العالم الأخرى مكانًا غريبًا ومنعزلًا وغامضًا، ولا يوجد إلا في الخيال فقط.</p>
+</p>وتعتبر في نظر الكثير من شعوب العالم الأخرى مكانًا غريبًا ومنعزلًا وغامضًا، ولا يوجد إلا في الخيال فقط.<p align="right">
 
-<p align="right">تعود النظرة الغربية للشرق كمنطقة صحراوية قاحلة يسكنها رعاة أشداء غريبو الطباع، إلى المؤلفين الأوروبيين القدامى، مثل هيرودوت. وقد تجلت هذه الفكرة بشكل كبير في أعمال الفنانين المستشرقين، الذين رسموا للشرق في هذه الأعمال مشاهد خيالية أيضًا.</p> 
+تعود النظرة الغربية للشرق كمنطقة صحراوية قاحلة يسكنها رعاة أشداء غريبو الطباع، إلى المؤلفين الأوروبيين القدامى، مثل هيرودوت. وقد تجلت هذه الفكرة بشكل كبير في أعمال الفنانين المستشرقين، الذين رسموا للشرق في هذه الأعمال مشاهد خيالية أيضًا. 
 
-<p align="right">استمرت هذه الطريقة في التفكير حتى وقتنا المعاصر، ويظهر ذلك في أفلام مثل حرب النجوم ولورنس العرب، وفي الإعلام الغربي الذي يغطي أخبار الشرق الأوسط.</p> 
+استمرت هذه الطريقة في التفكير حتى وقتنا المعاصر، ويظهر ذلك في أفلام مثل حرب النجوم ولورنس العرب، وفي الإعلام الغربي الذي يغطي أخبار الشرق الأوسط. 
 
 يصعب على الغربيين فهم الطبيعة الحية والنشطة للصحراء، وتراثها غير المادي المعقد، وهذه الجوانب مثلت أهمية كبيرة بالنسبة للمجتمع في الماضي والحاضر.   
 
