--- a/stops/2.md
+++ b/stops/2.md
@@ -21,7 +21,7 @@ hero_images:
 
 > تحتل الصحراء مكانة بارزة في ثقافة قطر وتراثها.
 
-</p>وتعتبر في نظر الكثير من شعوب العالم الأخرى مكانًا غريبًا ومنعزلًا وغامضًا، ولا يوجد إلا في الخيال فقط.<p align="right">
+وتعتبر في نظر الكثير من شعوب العالم الأخرى مكانًا غريبًا ومنعزلًا وغامضًا، ولا يوجد إلا في الخيال فقط.
 
 تعود النظرة الغربية للشرق كمنطقة صحراوية قاحلة يسكنها رعاة أشداء غريبو الطباع، إلى المؤلفين الأوروبيين القدامى، مثل هيرودوت. وقد تجلت هذه الفكرة بشكل كبير في أعمال الفنانين المستشرقين، الذين رسموا للشرق في هذه الأعمال مشاهد خيالية أيضًا. 
 
@@ -29,4 +29,4 @@ hero_images:
 
 يصعب على الغربيين فهم الطبيعة الحية والنشطة للصحراء، وتراثها غير المادي المعقد، وهذه الجوانب مثلت أهمية كبيرة بالنسبة للمجتمع في الماضي والحاضر.   
 
-والآن، وأنت تنظر إلى الصحراء في هذه المحطة من منظور الثقافة الشعبية، وبعيون الفنانين المستشرقين، ماذا تشاهد؟ هل تشاهد مكانًا أم فكرة خيالية؟ 
+<p align="right">والآن، وأنت تنظر إلى الصحراء في هذه المحطة من منظور الثقافة الشعبية، وبعيون الفنانين المستشرقين، ماذا تشاهد؟ هل تشاهد مكانًا أم فكرة خيالية؟</p> 
