--- a/stops/2.md
+++ b/stops/2.md
@@ -17,17 +17,18 @@ hero_images:
 <p align="right">الصور بإذن من مجموعة المقتنيات العامة - الدوحة</p>
 <p align="right">ومجموعة مقتنيات متحف لوسيل – الدوحة ومتحف موسغارد</p>
 
-<div align="right">
+
 ## تصوير الصحراء
-</div>
+
+
 > <p align="right">.تحتل الصحراء مكانة بارزة في ثقافة قطر وتراثها</p>
 
 <p align="right">.وتعتبر في نظر الكثير من شعوب العالم الأخرى مكانًا غريبًا ومنعزلًا وغامضًا، ولا يوجد إلا في الخيال فقط</p>
 
-<p align="right">تعود النظرة الغربية للشرق كمنطقة صحراوية قاحلة يسكنها رعاة أشداء غريبو الطباع، إلى المؤلفين الأوروبيين القدامى، مثل هيرودوت. وقد تجلت هذه الفكرة بشكل كبير في أعمال الفنانين المستشرقين، الذين رسموا للشرق في هذه الأعمال مشاهد خيالية أيضًا .</p>
+<p align="right">تعود النظرة الغربية للشرق كمنطقة صحراوية قاحلة يسكنها رعاة أشداء غريبو الطباع، إلى المؤلفين الأوروبيين القدامى، مثل هيرودوت. وقد تجلت هذه الفكرة بشكل كبير في أعمال الفنانين .المستشرقين، الذين رسموا للشرق في هذه الأعمال مشاهد خيالية أيضًا</p>
 
-<p align="right">ستمرت هذه الطريقة في التفكير حتى وقتنا المعاصر، ويظهر ذلك في أفلام مثل حرب النجوم ولورنس العرب، وفي الإعلام الغربي الذي يغطي أخبار الشرق الأوسط .</p>
+<p align="right">.ستمرت هذه الطريقة في التفكير حتى وقتنا المعاصر، ويظهر ذلك في أفلام مثل حرب النجوم ولورنس العرب، وفي الإعلام الغربي الذي يغطي أخبار الشرق الأوسط</p>
 
-<p align="right">يصعب على الغربيين فهم الطبيعة الحية والنشطة للصحراء، وتراثها غير المادي المعقد، وهذه الجوانب مثلت أهمية كبيرة بالنسبة للمجتمع في الماضي والحاضر .</p>  
+<p align="right">.يصعب على الغربيين فهم الطبيعة الحية والنشطة للصحراء، وتراثها غير المادي المعقد، وهذه الجوانب مثلت أهمية كبيرة بالنسبة للمجتمع في الماضي والحاضر</p>  
 
 <p align="right">والآن، وأنت تنظر إلى الصحراء في هذه المحطة من منظور الثقافة الشعبية، وبعيون الفنانين المستشرقين، ماذا تشاهد؟ هل تشاهد مكانًا أم فكرة خيالية؟</p> 
