--- a/stops/2.md
+++ b/stops/2.md
@@ -25,7 +25,7 @@ hero_images:
 
 <p align="right">.وتعتبر في نظر الكثير من شعوب العالم الأخرى مكانًا غريبًا ومنعزلًا وغامضًا، ولا يوجد إلا في الخيال فقط</p>
 
-<p align="right">تعود النظرة الغربية للشرق كمنطقة صحراوية قاحلة يسكنها رعاة أشداء غريبو الطباع، إلى المؤلفين الأوروبيين القدامى، مثل هيرودوت. وقد تجلت هذه الفكرة بشكل كبير في أعمال الفنانين </p>المستشرقين، الذين رسموا للشرق في هذه الأعمال مشاهد خيالية أيضًا
+<p align="right">تعود النظرة الغربية للشرق كمنطقة صحراوية قاحلة يسكنها رعاة أشداء غريبو الطباع، إلى المؤلفين الأوروبيين القدامى، مثل هيرودوت. وقد تجلت هذه الفكرة بشكل كبير في أعمال الفنانين </p>.المستشرقين، الذين رسموا للشرق في هذه الأعمال مشاهد خيالية أيضًا
 
 <p align="right">.ستمرت هذه الطريقة في التفكير حتى وقتنا المعاصر، ويظهر ذلك في أفلام مثل حرب النجوم ولورنس العرب، وفي الإعلام الغربي الذي يغطي أخبار الشرق الأوسط</p>
 
