--- a/stops/2.md
+++ b/stops/2.md
@@ -25,11 +25,11 @@ hero_images:
 
 .وتعتبر في نظر الكثير من شعوب العالم الأخرى مكانًا غريبًا ومنعزلًا وغامضًا، ولا يوجد إلا في الخيال فقط
 
-تعود النظرة الغربية للشرق كمنطقة صحراوية قاحلة يسكنها رعاة أشداء غريبو الطباع، إلى المؤلفين الأوروبيين القدامى، مثل هيرودوت. وقد تجلت هذه الفكرة بشكل كبير في أعمال الفنانين المستشرقين، الذين رسموا للشرق في هذه الأعمال مشاهد خيالية أيضًا.                            
+تعود النظرة الغربية للشرق كمنطقة صحراوية قاحلة يسكنها رعاة أشداء غريبو الطباع، إلى المؤلفين الأوروبيين القدامى، مثل هيرودوت. وقد تجلت هذه الفكرة بشكل كبير في أعمال الفنانين المستشرقين، الذين رسموا .للشرق في هذه الأعمال مشاهد خيالية أيضًا                            
 
-.ستمرت هذه الطريقة في التفكير حتى وقتنا المعاصر، ويظهر ذلك في أفلام مثل حرب النجوم ولورنس العرب، وفي الإعلام الغربي الذي يغطي أخبار الشرق الأوسط
+ستمرت هذه الطريقة في التفكير حتى وقتنا المعاصر، ويظهر ذلك في أفلام مثل حرب النجوم ولورنس العرب، .وفي الإعلام الغربي الذي يغطي أخبار الشرق الأوسط
 
-.يصعب على الغربيين فهم الطبيعة الحية والنشطة للصحراء، وتراثها غير المادي المعقد، وهذه الجوانب مثلت أهمية كبيرة بالنسبة للمجتمع في الماضي والحاضر  
+يصعب على الغربيين فهم الطبيعة الحية والنشطة للصحراء، وتراثها غير المادي المعقد، وهذه الجوانب مثلت .أهمية كبيرة بالنسبة للمجتمع في الماضي والحاضر  
 
 والآن، وأنت تنظر إلى الصحراء في هذه المحطة من منظور الثقافة الشعبية، وبعيون الفنانين المستشرقين، ماذا تشاهد؟ هل تشاهد مكانًا أم فكرة خيالية؟
 </div>
