--- a/stops/1.md
+++ b/stops/1.md
@@ -8,11 +8,13 @@ page_rank: 1
 stop_id: 1
 audio_file: English R05 (mp3cut.net).mp3
 hero_images:
- - path: Cleopatra.jpg
-   alt_text: Image of Cleopatra
+ - path: cleopatra_og.jpg
+   alt_text: The Meeting of Antony and Cleopatra
  - path: Cleopatra 2.jpg
    alt_text: Another image of Cleopatra
 ---
+
+*Image 1: Lawrence Alma-Tadema,* The Meeting of Antony and Cleopatra, *ca. 1884, oil on panel, 65.5 x 91.4 cm. Lusail Museum Collection. Photo: © Lusail Museum, Qatar Museums, 2022.*
 
 Images courtesy of General Collection - Doha, Lusail Museum Collection - Doha and Her Highness Sheikha Moza bint Nasser Photo Library, © AR AL – Baker
 
