--- a/stops/2.md
+++ b/stops/2.md
@@ -3,7 +3,7 @@ layout: episode
 permalink: /stops/2/
 type: stop
 section_title: Picturing a Desert
-title: Picturing a Desert
+title: تصوير الصحراء
 page_rank: 2
 stop_id: 2
 audio_file: R06 (mp3cut.net).mp3
