--- a/stops/3.md
+++ b/stops/3.md
@@ -6,16 +6,16 @@ section_title: Uncovering Orientalism
 title: Uncovering Orientalism
 page_rank: 3
 stop_id: 3
-video_file: R03.01.AV_AR UNCOVERING ORIENTALISM 2V v05-4K_compressed (1).mp4
+video_file: R03.01.AV_AR UNCOVERING ORIENTALISM 2V v05-4K.mp4
 ---
-<video src="/assets/img/stops/R03.01.AV_AR UNCOVERING ORIENTALISM 2V v05-4K_compressed (1).mp4" controls="controls" muted="muted" class="d-block rounded-bottom-2 width-fit" style="max-height:640px;">
+<video src="assets/img/stops/R03.01.AV_AR UNCOVERING ORIENTALISM 2V v05-4K.mp4" controls="controls" muted="muted" class="d-block rounded-bottom-2 width-fit" style="max-height:640px;">
 </video>
 
 Images courtesy of General Collection - Doha and the Lusail Museum Collection - Doha
 
 ## Uncovering Orientalism
 
-> Welcome to the Uncovering Orientalism Gallery. In this room you will find highlights from Lusail Museum’s world-class collection of Orientalist art.
+> Welcome to the Uncovering Orientalism Gallery. In this room, you will find highlights from Lusail Museum’s world-class collection of Orientalist art.
 
 Sheikh Jassim lived during a period when Western Europe and North America were captivated by the Indian Ocean World and the Orientalist gaze was expanding.
 
@@ -25,7 +25,7 @@ What do we mean by ‘Orientalism’?
 
 Orientalism refers to ‘Western’ representations, imitations and often, misinterpretations of the ‘Eastern’ world. 
 
-In art we might find this through the medium of paintings, sketches, photographs, ceramics or fashion. 
+In art, we might find this through the medium of paintings, sketches, photographs, ceramics or fashion. 
 
 This work by French painter Jean-Léon Gérôme is a beautiful depiction of a musician. So realistic, one might think it captures a particular moment in time. But like many Orientalist painters, Gérôme often painted from his studio where he employed models to pose and drew inspiration from photographs or artefacts he had collected on his travels.
 
@@ -33,7 +33,7 @@ Is it important to understand the context of how an artwork was made?
 
 Many Orientalist artists travelled or lived across parts of North Africa, the Middle East and the Indian Ocean World. Some took great care to accurately document their experiences while others painted entirely from their imaginations. 
 
-Some artists accompanied diplomats on missions, or soldiers in battle; others simply painted what was fashionable for commercial means.
+Some artists accompanied diplomats on missions or soldiers in battle; others simply painted what was fashionable for commercial means.
 
 Is knowing the artist’s intention important to understanding a piece of art?
 
