--- a/stops/3.md
+++ b/stops/3.md
@@ -8,7 +8,7 @@ page_rank: 3
 stop_id: 3
 video_file: R03.01.AV_AR UNCOVERING ORIENTALISM 2V v05-4K.mp4
 ---
-<video src="assets/img/stops/R03.01.AV_AR UNCOVERING ORIENTALISM 2V v05-4K.mp4" controls="controls" muted="muted" class="d-block rounded-bottom-2 width-fit" style="max-height:640px;">
+<video src="/assets/img/stops/R03.01.AV_AR UNCOVERING ORIENTALISM 2V v05-4K.mp4" controls="controls" muted="muted" class="d-block rounded-bottom-2 width-fit" style="max-height:640px;">
 </video>
 
 Images courtesy of General Collection - Doha and the Lusail Museum Collection - Doha
