--- a/stops/2.md
+++ b/stops/2.md
@@ -17,9 +17,7 @@ hero_images:
 <p align="right">الصور بإذن من مجموعة المقتنيات العامة - الدوحة</p>
 <p align="right">ومجموعة مقتنيات متحف لوسيل – الدوحة ومتحف موسغارد</p>
 
-
-## تصوير الصحراء
-
+<h2>تصوير الصحراء</h2>
 
 >  <p align="right">.تحتل الصحراء مكانة بارزة في ثقافة قطر وتراثها</p>
 
