--- a/stops/1.md
+++ b/stops/1.md
@@ -8,7 +8,7 @@ page_rank: 1
 stop_id: 1
 audio_file: English R05 (mp3cut.net).mp3
 hero_images:
- - path: cleopatra_og.jpg
+ - path: Cleopatra.jpg
    alt_text: The Meeting of Antony and Cleopatra
  - path: Cleopatra 2.jpg
    alt_text: Another image of Cleopatra
