--- a/stops/1.md
+++ b/stops/1.md
@@ -33,3 +33,5 @@ In this gallery, you will find a stunning painting by 19th-century artist Lawren
 Have a look at the digital tablets and discover more about the enduring legacies of Egypt and Cleopatra through art and popular culture.
 
 And the Kingdom of Kush and other African civilisations, alongside Qatar’s involvement through the Qatar-Sudan Archaeological Project.
+
+<img align="left" width="100" height="100" src="/assets/img/meta/stop 1.png"/>
